--- a/templates/edit_announcement.html
+++ b/templates/edit_announcement.html
@@ -10,6 +10,8 @@
 
             <form method="POST">
                 
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+
                 <div class="form-group">
                     <label for="title">Título del Anuncio:</label>
                     <input type="text" id="title" name="title" value="{{ announcement.title }}" required>
